attempting heroku deployment

--- a/templates/main2.html
+++ b/templates/main2.html
@@ -1,4 +1,4 @@
-<div class="" ng-controller="mainCtrl">
+<!-- <div class="" ng-controller="mainCtrl"> -->
 	<h1 class="title">My Goal Calendar:</h1>
 	<div ng-repeat="day in days" ng-click="setSelectedDay(day)" class="calendar-labels">
 		<div ng-class="{dayselected: isSelected(day)}">
@@ -18,4 +18,4 @@
 				<span>
 			</div>
 <!-- 		</div> -->
-	</div>
+<!-- 	</div> -->
