--- a/static/templates/task.html
+++ b/static/templates/task.html
@@ -53,7 +53,7 @@
 
 			<div>
 				<span class="large-3 inlineblock task-item">Days:</span>
-				<span class="large-8 inlineblock detail">{{ selectedTask.days }}</span>
+				<span class="large-8 inlineblock detail" ng-repeat="days in selectedTask">{{ days }}</span>
 			</div>
 
 			<div ng-show="selectedTask.reward ">
