--- a/static/templates/task.html
+++ b/static/templates/task.html
@@ -3,7 +3,7 @@
 <div class="large-4 columns">
 	<h2 class="title bottom-border">Current Goals</h2>
 		<ul id="taskListing">
-			<li ng-repeat="task in taskList track by $index" ng-click="setSelectedTask(task)">
+			<li ng-repeat="task in taskList track by $index" ng-click="setSelectedTask(task)" class="task-list">
 				<div class="taskListing" ng-class="{taskselected: isSelected(task)}">
 					<div class="goal-title">{{ task.title }}</div>
 					<div>
