--- a/static/templates/task.html
+++ b/static/templates/task.html
@@ -92,7 +92,7 @@
 			</div>
 
 			<div class="bottom-border">
-				<button class="button" ng-click="editTask(selectedTask)">Edit</button>
+<!-- 				<button class="button" ng-click="editTask(selectedTask)">Edit</button> -->
 				<button class="button" ng-click="removeTask(selectedTask)">Delete</button>
 			</div>
 	</div>
