--- a/static/templates/main2.html
+++ b/static/templates/main2.html
@@ -1,21 +1,3 @@
 <!-- <div class="" ng-controller="mainCtrl"> -->
 	<h1 class="title">My Goal Calendar:</h1>
-	<div ng-repeat="day in days" ng-click="setSelectedDay(day)" class="calendar-labels">
-		<div ng-class="{dayselected: isSelected(day)}">
-			<div class="calendar-days">
-				<span >{{ day.name }}</span>
-			</div>
-		</div>
-	</div>
-	<div class="large-11 columns">
-<!-- 		<div ng-show="!selectedDay"> -->
-			<div ng-repeat="task in taskList">
-				<div class="task-box">
-					<div class="goal-title">{{ selectedDay.title }}</div>
-				</div> 
-			</div>
-			<div ng-show="">
-				<span>
-			</div>
-<!-- 		</div> -->
-<!-- 	</div> -->
+	<p>This page will contain a weekly / monthly calendar view</p>
